@@ -25,7 +25,7 @@
 	</target>
 	
 	<target name="init" depends="clean">
-
+		<nant buildfile="${base.dir}/../../../copy-tasks.xml" target="copy-nullables" inheritall="true" />
 	</target>
 
 	<target name="build" depends="init,tests.run,copytobuilddir" />
